Created CHANGELOG.txt to keep track of changes.--Peter
Created controllers package.--Peter
Moved Controller to Controllers.--Peter
Created entityInterfaces package.--Peter
Created interface classes for each Entity class in entity/Interfaces.--Peter
Created interface class for Controller.--Peter
Moved Editable, Displayable to entityInterfaces.--Peter
Added exceptions to XMLParser if duplicate names are loaded from an XML File. --Wes


TODO: //[Class]: [Method]: [Changes]
Please specify the method you made changes to under the classes name
Controllers:
    Controller:

    SingleLibraryController:

    WorkingDirectory:


Display:
    CLIDisplay:

    Displayer:

    GUIDisplay:

Entity Interfaces:
    Displayable:

    Editable:
        - Wrote the compareTo method.
    Entity:
        - Moved the registerRelation and removeRelation methods to the
          Relatable interface.
    RatedRelation:

    Relation:

    -- Created the Relatable interface.

Entity Classes:
    Argument:
        - Wrote an equals method.
        - Removed the registerRelation and removeRelation methods.
    Idea:
        - Wrote an equals method.

    Library:
        - Wrote the equals method.

    Note:
        - Wrote the equals method.
        - Changed getChildren to getEntityChildren.
    RefArg:

    Reference:
        - Wrote the equals method.
    RefIdea:

    Theme:
        - Wrote the equals method.
    Topic:
        - Wrote the equals method.
        - Removed the registerRelation and removeRelation methods.
        - Changed getChildren to getEntityChildren.
        - Changed addTheme to registerChild.

Management:
    RefMeisterExec:


XML:
    MalformedXMLException:

    Saveable:

    XMLManager:

    XMLParser:

Other:
    - Every Instance of Editable changed to an instance of Entity